VendorCalc/force-app/main/default/objects/Calculator__c/Calculator__c.object-meta.xml
<CustomObject>
    <label>Chase Calculator Record</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chase Calculator Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>