VendorCalc/force-app/main/default/objects/Calculator__c/fields/Ballon__c.field-meta.xml
<CustomField>
    <fullName>Ballon__c</fullName>
    <label>Ballon(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>