VendorCalc/force-app/main/default/objects/Calculator__c/fields/Balloon_c__c.field-meta.xml
<CustomField>
    <fullName>Balloon_c__c</fullName>
    <label>Balloon ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>