VendorCalc/force-app/main/default/objects/Calculator__c/fields/Cost_Price_Inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Inc_GST__c</fullName>
    <label>Cost Price Inc GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>