VendorCalc/force-app/main/default/objects/Calculator__c/fields/Customer_Rate_Expected__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rate_Expected__c</fullName>
    <label>Customer Rate Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>