VendorCalc/force-app/main/default/objects/Calculator__c/fields/Desired_Brokerage_Incl_GST_p__c.field-meta.xml
<CustomField>
    <fullName>Desired_Brokerage_Incl_GST_p__c</fullName>
    <label>Desired Brokerage Incl GST (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>