VendorCalc/force-app/main/default/objects/Calculator__c/fields/Document_Fee_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Document_Fee_Disclosed__c</fullName>
    <label>Document Fee Disclosed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>