VendorCalc/force-app/main/default/objects/Calculator__c/fields/Document_Fee_Financed__c.field-meta.xml
<CustomField>
    <fullName>Document_Fee_Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Fee Financed</label>
    <type>Checkbox</type>
</CustomField>