VendorCalc/force-app/main/default/objects/Calculator__c/fields/Establishment_Fee_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee_Disclosed__c</fullName>
    <label>Establishment Fee Disclosed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>