VendorCalc/force-app/main/default/objects/Calculator__c/fields/Establishment_Fee_Financed__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee_Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Establishment Fee Financed</label>
    <type>Checkbox</type>
</CustomField>