VendorCalc/force-app/main/default/objects/Calculator__c/fields/Fee_Other_Financed__c.field-meta.xml
<CustomField>
    <fullName>Fee_Other_Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Other Financed</label>
    <type>Checkbox</type>
</CustomField>