VendorCalc/force-app/main/default/objects/Calculator__c/fields/Fees_Other_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>Fees_Other_Disclosed__c</fullName>
    <label>Fees Other Disclosed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>