VendorCalc/force-app/main/default/objects/Calculator__c/fields/Include_GST__c.field-meta.xml
<CustomField>
    <fullName>Include_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include GST</label>
    <type>Checkbox</type>
</CustomField>