VendorCalc/force-app/main/default/objects/Calculator__c/fields/Is_Active_Balloon__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Balloon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Balloon</label>
    <type>Checkbox</type>
</CustomField>