VendorCalc/force-app/main/default/objects/Calculator__c/fields/Is_Active_Desired_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Desired_Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Desired Brokerage</label>
    <type>Checkbox</type>
</CustomField>