VendorCalc/force-app/main/default/objects/Calculator__c/fields/ITC_Level__c.field-meta.xml
<CustomField>
    <fullName>ITC_Level__c</fullName>
    <label>ITC Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>