VendorCalc/force-app/main/default/objects/Calculator__c/fields/Less_Deposite__c.field-meta.xml
<CustomField>
    <fullName>Less_Deposite__c</fullName>
    <label>Less Deposite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>