VendorCalc/force-app/main/default/objects/Calculator__c/fields/Less_TradeIn__c.field-meta.xml
<CustomField>
    <fullName>Less_TradeIn__c</fullName>
    <label>Less TradeIn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>