VendorCalc/force-app/main/default/objects/Calculator__c/fields/Loan_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Facility_Type__c</fullName>
    <label>Loan Facility Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>