VendorCalc/force-app/main/default/objects/Calculator__c/fields/Matrix_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Brokerage__c</fullName>
    <label>Matrix Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>