VendorCalc/force-app/main/default/objects/Calculator__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <label>Partner Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>