VendorCalc/force-app/main/default/objects/Calculator__c/fields/Payments_to_Own__c.field-meta.xml
<CustomField>
    <fullName>Payments_to_Own__c</fullName>
    <label>Payments to Own</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>