VendorCalc/force-app/main/default/objects/Calculator__c/fields/Please_enter_your_desired_Base_Rate_here__c.field-meta.xml
<CustomField>
    <fullName>Please_enter_your_desired_Base_Rate_here__c</fullName>
    <label>Please enter your desired Base Rate here</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>