VendorCalc/force-app/main/default/objects/Calculator__c/fields/PPSR_Fee_Financed__c.field-meta.xml
<CustomField>
    <fullName>PPSR_Fee_Financed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPSR Fee Financed</label>
    <type>Checkbox</type>
</CustomField>