VendorCalc/force-app/main/default/objects/Calculator__c/fields/PPSR_Fees_Disclosed__c.field-meta.xml
<CustomField>
    <fullName>PPSR_Fees_Disclosed__c</fullName>
    <label>PPSR Fees Disclosed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>