VendorCalc/force-app/main/default/objects/Calculator__c/fields/Published_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Published_Base_Rate__c</fullName>
    <label>Published Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>