VendorCalc/force-app/main/default/objects/Calculator__c/fields/Repayment_Expected_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Expected_Weekly__c</fullName>
    <label>Repayment Expected Weekly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>