VendorCalc/force-app/main/default/objects/Calculator__c/fields/Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>