VendorCalc/force-app/main/default/objects/Calculator__c/fields/Repayment_Non_Published__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Non_Published__c</fullName>
    <label>Repayment $ Non-Published</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>