VendorCalc/force-app/main/default/objects/Calculator__c/fields/Total_Incl_GST_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_GST_c__c</fullName>
    <label>Total (Incl GST) $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>