VendorCalc/force-app/main/default/objects/Calculator__c/fields/Total_Incl_GST_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_GST_GST__c</fullName>
    <label>Total (Incl GST+GST) $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>