VendorCalc/force-app/main/default/objects/Calculator__c/fields/Unclaimable_GST__c.field-meta.xml
<CustomField>
    <fullName>Unclaimable_GST__c</fullName>
    <label>Unclaimable GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>