VendorCalc/force-app/main/default/objects/Calculator__c/fields/Vendor_Guest_User__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Guest_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Guest User</label>
    <referenceTo>Vendor_Guest_User__c</referenceTo>
    <relationshipName>Quote_Calculator_Records</relationshipName>
    <type>Lookup</type>
</CustomField>