VendorCalc/force-app/main/default/objects/Calculator__c/recordTypes/Chase_Finance.recordType-meta.xml
<RecordType>
    <fullName>Chase_Finance</fullName>
    <active>true</active>
    <label>Chase Finance</label>
</RecordType>